--- a/style.css
+++ b/style.css
@@ -56,10 +56,6 @@ header h1 {
 .news-section-title {
   background-color: #102223;
   padding: 1rem;
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: ⁠Aucun accèsff;
 }
 
 .news-section,
@@ -108,7 +104,6 @@ header h1 {
 .section h2 {
   padding: 1rem;
   font-size: 1.5rem;
-  margin: 0 0 1rem 0;
 }
 
 .section .news-item {
@@ -122,50 +117,92 @@ header h1 {
   shape-outside: margin-box;
   margin: 0 20px 5px 0;
 }
-
-.container2 {
-  display: flex;
-  margin: 0;
-  background-color: #102223;
-  width: 550px;
-  padding: 10px;
-  /* margin: auto; */
+.title {
+  display: grid;
 }
 
-.card2 {
-  width: 200px;
-  height: 150px;
+.section2 {
+  /* display: flex;
+  justify-content: center; */
+  padding: 20px;
+}
+
+.content-wrapper {
+  display: flex;
+  gap: 20px;
+  max-width: 900px;
+  width: 100%;
+}
+
+/* Section Galerie */
+.container2 {
   background-color: #346264;
+  /* padding: 10px; */
+}
+
+.container2 .title {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.gallery {
+  display: flex;
+  gap: 10px;
+  background-color: #346264;
+  width: 325px;
+}
+.gallery2 {
+  display: grid;
+  justify-content: end;
+  align-content: center;
+}
+
+/* .card2 {
+  width: 100px;
+  height: 75px;
+  border-radius: 3px;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.gallery {
-  display: flex;
+} */
+
+.card2 img {
+  width: 100%;
+  /* height: 100%; */
+  /* object-fit: cover; */
 }
 
-/* .gallery img {
-  flex: 1;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 5px;
-} */
+/* Section Réseaux sociaux */
+.social-wrapper {
+  /* background-color: #173d3d; */
+  height: 10px;
+  text-align: center;
+}
+
+.social-wrapper .title {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
 
 .social-links {
   display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  flex-direction: column;
+  gap: 10px; /* Espacement entre les liens */
 }
 
 .social-links a {
-  color: #fff;
+  color: #00c2c2;
   text-decoration: none;
-  background-color: #173d3d;
-  padding: 5px 15px;
+  background-color: #102223;
+  padding: 5px 10px;
   border-radius: 3px;
+  text-align: center;
 }
 
 .social-links a:hover {
   background-color: #00c2c2;
+  color: #fff;
 }
